[gd_scene format=3 uid="uid://dtuoxu2ocepu1"]

[ext_resource type="Texture2D" uid="uid://8k11t4ovo4tc" path="res://Characters(100x100)/Orc/Orc/Orc-Idle.png" id="1_1oo68"]
[ext_resource type="Script" uid="uid://b5hqsliauvu7q" path="res://Orco/orco.gd" id="1_hjlov"]
[ext_resource type="Texture2D" uid="uid://vf64cfme4763" path="res://Characters(100x100)/Orc/Orc/Orc-Walk.png" id="2_hjlov"]

[sub_resource type="CircleShape2D" id="CircleShape2D_swog3"]
radius = 13.038404

[sub_resource type="Animation" id="Animation_swog3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1oo68")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7o482"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1oo68")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_nw7dq"]
resource_name = "walk"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hjlov")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohlgx"]
_data = {
&"RESET": SubResource("Animation_swog3"),
&"idle": SubResource("Animation_7o482"),
&"walk": SubResource("Animation_nw7dq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yu4tc"]
radius = 30.675724

[node name="Orco" type="CharacterBody2D" unique_id=530154821 groups=["orco"]]
position = Vector2(39, -5)
collision_mask = 3
slide_on_ceiling = false
script = ExtResource("1_hjlov")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1118478162]
position = Vector2(-40, -11)
scale = Vector2(2.56, 2.56)
texture = ExtResource("1_1oo68")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=446263913]
position = Vector2(-35, -8)
shape = SubResource("CircleShape2D_swog3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=31621851]
libraries/ = SubResource("AnimationLibrary_ohlgx")

[node name="Timer" type="Timer" parent="." unique_id=1694928650]

[node name="Colision_combate" type="Area2D" parent="." unique_id=36297351]
position = Vector2(-37, -7)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colision_combate" unique_id=1537503548]
position = Vector2(2, -2)
shape = SubResource("CircleShape2D_yu4tc")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Colision_combate" to="." method="_on_colision_combate_area_entered"]
